--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -143,6 +143,86 @@ position:relative
     top: 8px;
 }
 
+.overlay {
+    background: #200D1D99;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+.modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 60px 30px;
+    background: #FFF2FD;
+    border-top-left-radius: 30%;
+    border-bottom-right-radius: 30%;
+    position: relative
+}
+.modal-close {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    cursor: pointer;
+
+}
+.modal-close-line {
+    width: 25px;
+    height: 2px;
+    background: var(--blue);
+}
+
+.modal-close-line:nth-child(1){
+    rotate: -45deg;
+}
+
+.modal-close-line:nth-child(2){
+    rotate: 45deg;
+    margin-top: -2px;
+}
+.modal-logo {
+    width: 132px;
+    height: 132px;
+    border-radius: 50%;
+}
+.modal-info {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 60px;
+    margin-top: 40px;
+    margin-bottom: 45px;
+}
+.modal-poster {
+    width: 40%;
+}
+.modal-info-data {
+    width: 50%;
+}
+.modal-info-data-title {
+    font-size: 24px;
+    font-weight: 600px;
+    color: var(--pink);
+    margin-bottom: 7px;
+}
+.modal-info-data-subtitle {
+    font-size: 18px;
+    color: var(--dark);
+
+}
+.modal-barcode {
+}
+.modal-info-data-buy {
+}
+.modal-more {
+}
+
 @media (max-width: 1024px) {
     .header-title {
         font-size: 40px;
