--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,9 @@
 body {
     
 }
+.overlay{
+    display: none;
+}
 
 .page-wrapper {
     background: black;
@@ -86,8 +89,8 @@ body {
     width: 153px;
     height: 143px;
     border: 1px solid #bc56c650;
-    bottom: 70%;
-    right: -28px;
+    bottom: 51%;
+    right: 25px;
     border-top-left-radius: 30px;
     border-bottom-right-radius: 30px;
 
@@ -151,7 +154,7 @@ position:relative
     right: 0;
     bottom: 0;
     left: 0;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     z-index: 2;
