made attempt to refactor code

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,349 +1,10 @@
-@import '/styles/reset.css';
-@import '/styles/color.css';
-body {
-    
-}
-.overlay{
-    display: none;
-}
+@import url('./base/reset.css');
+@import url('./base/base.css');
+@import url('./base/container.css');
 
-.page-wrapper {
-    background: black;
-    min-height: 100vh;
-}
-.header {
-    background: url(/images/header-bg.jpg) no-repeat center/cover;
-    padding: 40px 40px 133px;
-    position: relative;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.header__logo {
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-.header-title {
-    font-size: 50px;
-    text-align: center;
-    color: var(--pink);
-    width: 588px;
-    margin-bottom: 52px;
-
-}
-.header-searches {
-    display: flex;
-    justify-content: center;
-    column-gap: 30px;
-}
-.header-searches__ticket, .header-searches__country  {
-    background: rgba(255, 255, 255, 0.200);
-    backdrop-filter: blur(20px);
-    border-radius: 20px;
-    color: var(--main-white);
-    padding: 10px 30px;
-    position: relative;
-}
-
-.header-searches__ticket::placeholder, .header-searches__country::placeholder {
-    color: var(--gray);
-}
-
-
-.main {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20px 180px;
-    justify-content: space-between;
-    row-gap: 50px;
-}
-.footer {
-    padding: 80px 0px 19px 0px;
-}
-
-.footer-paragr {
-    color: var(--gray);
-    font-weight: 400;
-    font-size: 16px;
-    text-align: center;
-}
-
-.card {
-    min-width: 18%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
-    position: relative;
-    bottom: 55%;
-    right: -13px;
-}
-
-.card::after {
-    content: '';
-    position: absolute;
-    z-index: 2;
-    width: 153px;
-    height: 143px;
-    border: 1px solid #bc56c650;
-    bottom: 51%;
-    right: 25px;
-    border-top-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-
-}
-
-.card-img {
-    border-radius: 50px 0;
-width: 180px;
-height: 227px;
-object-fit: cover;
-}
-
-.card-name {
-    font-weight: 700;
-font-size: 16px;
-text-align: center;
-color: var(--pink);
-padding-top: 5px;
-
-}
-
-.card-date {
-    font-weight: 400;
-font-size: 16px;
-text-align: center;
-color: var(--main-white);
-padding-top: 5px;
-}
-
-.card-location {
-    font-weight: 600;
-font-size: 14px;
-text-align: center;
-color: #fff;
-padding-top: 5px;
-}
-
-.card-location__name {
-    font-weight: 600;
-font-size: 14px;
-text-align: center;
-color: #fff;
-padding-top: 5px;
-position:relative
-}
-
-.card-location__name::before {
-    content: '';
-    position: absolute;
-    background: url(/images/location.svg) no-repeat center/cover;
-    width: 7px;
-    height: 10px;
-    left: -10px;
-    top: 8px;
-}
-
-.overlay {
-    background: #200D1D99;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-}
-.modal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 60px 30px;
-    background: #FFF2FD;
-    border-top-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-    position: relative
-}
-.modal-close {
-    position: absolute;
-    right: 15px;
-    top: 25px;
-    cursor: pointer;
-    font-size: 30px;
-}
-.modal-close-line {
-    width: 25px;
-    height: 2px;
-    background: var(--blue);
-}
-
-.modal-close-line:nth-child(1){
-    rotate: -45deg;
-}
-
-.modal-close-line:nth-child(2){
-    rotate: 45deg;
-    margin-top: -2px;
-}
-.modal-logo {
-    width: 132px;
-    height: 132px;
-    border-radius: 50%;
-}
-.modal-info {
-    display: flex;
-    justify-content: space-between;
-    column-gap: 60px;
-    margin-top: 40px;
-    margin-bottom: 45px;
-}
-.modal-poster {
-    width: 40%;
-}
-.modal-info-data {
-    width: 50%;
-}
-.modal-info-data-title {
-    font-size: 24px;
-    font-weight: 600px;
-    color: var(--pink);
-    margin-bottom: 7px;
-}
-.modal-info-data-subtitle {
-    font-size: 18px;
-    color: var(--dark);
-    margin-bottom: 10px;
-}
-
-.date {
-    margin-bottom: 4px;
-}
-
-.place {
-    margin-bottom: 4px;
-}
-
-.second {
-    margin-bottom: 23px;
-}
-
-.modal-barcode {
-    margin-right: 13px;
-}
-.modal-info-data-buy {
-    font-family: var(--main-white);
-font-weight: 500;
-font-size: 16px;
-color: #fff;
-    border-radius: 5px;
-    width: 145px;
-    height: 40px;
-    background-color: var(--blue);
-margin-bottom: 20px;
-
-}
-.modal-more {
-    font-family: var(--main-white);
-    font-weight: 500;
-    font-size: 16px;
-    color: var(--blue);
-    border: 1px solid #dc56c5;
-border-radius: 5px;
-width: 255px;
-height: 40px;
-}
-
-.footer-pagination {
-    display: flex;
-    justify-content: center;
-}
-
-.footer-pagination-page{
-    color: white;
-    padding: 5px 12px;
-    cursor: pointer;
-}
-
-.active-page {
-    
-    border: 1px solid var(--pink);
-    border-top-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-}
-
-@media (max-width: 1024px) {
-    .header-title {
-        font-size: 40px;
-    }
-    .header__logo {
-        width: 141px;
-    }
-    .main {
-        padding-left: 100px;
-        padding-right: 100px;
-    }
-}
-
-@media (max-width:768px) {
-    .header-title {
-        font-size: 30px;
-        width: unset;
-    }
-    .header{
-        padding-top: 81px;
-        padding-bottom: 80px;
-    }
-}
-
-@media (max-width: 600px) {
-    .card {
-        width: 47%;
-    }
-    .card-img{
-        width: 128px;
-        height: 161px;
-    }
-    .main {
-        align-items: center;
-        padding-left: 25px;
-        padding-right: 25px;
-    }
-
-    .card::after {
-        right: 30px;
-        width: 108px;
-        height: 101px;
-    }
-    .footer {
-        padding-top: 30px;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-}
-
-
-@media (max-width: 500px) {
-    .header-searches {
-        flex-direction: column;
-        row-gap: 25px;
-    }
-    .header{
-        padding-bottom: 50px;
-    }
-}
-
-@media (max-width: 425px) {
-    .header-title {
-        font-size: 18px;
-    }
-    .header{
-        padding-bottom: 30px;
-    }
-}
+@import url('./layout/header.css');
+@import url('./layout/cards.css');
+@import url('./layout/modal.css');
+@import url('./layout/pagination.css');
+@import url('./layout/footer.css');
 
